--- a/ice/nelson.html
+++ b/ice/nelson.html
@@ -6,19 +6,21 @@
     <title>Russell M. Nelson</title>
     <style>
         /* Insert styles here, this is called an internal stylesheet  */
+        @import url('https://fonts.googleapis.com/css2?family=Nanum+Brush+Script&display=swap');
         body {
             background: #FFECD7;
+            font-family: Helvetica, sans-serif
         }
         #card {
             background-color: #008db1;
             border-radius: 20px;
             border: 5px solid #004E63;;
-            padding: 50px;
-            width: 400px;
+            padding: 5px 50px;
+            width: 330px;
             margin: 0 auto;
         }
         img {
-            width: 200px;
+            width: 280px;
             display: block;
             margin: 0 auto;
             border: 4px solid white;
@@ -26,24 +28,34 @@
         h1 {
             text-align: center;
             color: white;
+            font-size: 38px;
         }
         h2 {
             text-align: center;
             color: #91E4FB;
+            font-size: 18px;
+        }
+        a {
+            text-decoration: none;
         }
         h3 {
             color: white;
+            font-size: 20px;
         }
         h4 {
             text-align: center;
             color: #FFD783;
+            font-family: "Nanum Brush Script";
+            font-size: 20px;
+        }
+        ul {
+            padding-left: 80px;
         }
     </style>
 </head>
 <body>
     <div id="card">
         <h1>Russell M. Nelson</h1>
-        <!-- <h2>17th President of the Church of Jesus Christ of Latter-day Saints</h2> -->
         <a href="churchofjesuschrist.org" target="_blank">
             <h2>17th President of the Church of Jesus Christ of Latter-day Saints</h2>
         </a>
