--- a/ice/nelson.html
+++ b/ice/nelson.html
@@ -7,6 +7,7 @@
     <style>
         /* Insert styles here, this is called an internal stylesheet  */
         @import url('https://fonts.googleapis.com/css2?family=Nanum+Brush+Script&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Kings&display=swap');
         body {
             background: #FFECD7;
             font-family: Helvetica, sans-serif
@@ -29,6 +30,7 @@
             text-align: center;
             color: white;
             font-size: 38px;
+            font-family: 'Kings'
         }
         h2 {
             text-align: center;
@@ -55,7 +57,7 @@
 </head>
 <body>
     <div id="card">
-        <h1>Russell M. Nelson</h1>
+        <h1>In Loving Memory of Russell M. Nelson</h1>
         <a href="churchofjesuschrist.org" target="_blank">
             <h2>17th President of the Church of Jesus Christ of Latter-day Saints</h2>
         </a>
@@ -63,6 +65,7 @@
         <h3>
             <ul>
                 <li>Born: Sep 9, 1924</li>
+                <li>Death: Sep 27, 2025</li>
                 <li>Apostle: Apr 7, 1984</li>
                 <li>Prophet: Jan 14, 2018</li>
             </ul>
