--- a/ice/nelson.html
+++ b/ice/nelson.html
@@ -7,7 +7,7 @@
     <style>
         /* Insert styles here, this is called an internal stylesheet  */
         @import url('https://fonts.googleapis.com/css2?family=Nanum+Brush+Script&display=swap');
-        @import url('https://fonts.googleapis.com/css2?family=Kings&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Quintessential&display=swap');
         body {
             background: #FFECD7;
             font-family: Helvetica, sans-serif
@@ -15,9 +15,10 @@
         #card {
             background-color: #008db1;
             border-radius: 20px;
-            border: 5px solid #004E63;;
+            border: 5px solid #004E63;
+            border-color: rgba(255, 0, 0, 0.747);
             padding: 5px 50px;
-            width: 330px;
+            width: 400px;
             margin: 0 auto;
         }
         img {
@@ -26,11 +27,20 @@
             margin: 0 auto;
             border: 4px solid white;
         }
+        #heart {
+            border: none;
+            width: 20px;
+            padding-bottom: 20px; 
+        }
         h1 {
             text-align: center;
             color: white;
             font-size: 38px;
-            font-family: 'Kings'
+            font-family: 'Quintessential';
+            margin-bottom: 0px;
+        }
+        #line {
+            margin-top: -30px;
         }
         h2 {
             text-align: center;
@@ -51,13 +61,14 @@
             font-size: 20px;
         }
         ul {
-            padding-left: 80px;
+            padding-left: 110px;
         }
     </style>
 </head>
 <body>
     <div id="card">
         <h1>In Loving Memory of Russell M. Nelson</h1>
+        <h1 id="line">*-----------------*</h1>
         <a href="churchofjesuschrist.org" target="_blank">
             <h2>17th President of the Church of Jesus Christ of Latter-day Saints</h2>
         </a>
@@ -65,12 +76,13 @@
         <h3>
             <ul>
                 <li>Born: Sep 9, 1924</li>
-                <li>Death: Sep 27, 2025</li>
                 <li>Apostle: Apr 7, 1984</li>
                 <li>Prophet: Jan 14, 2018</li>
+                <li>Death: Sep 27, 2025</li>
             </ul>
         </h3>
         <h4>"I urge you to devote time each week - for the rest of your life - to increase your understanding of the Atonement of Jesus Christ."</h4>
+        <img id = "heart" src="images/heart.webp" alt="heart">
     </div>
 </body>
 </html>
