portal page started

--- a/reference.html
+++ b/reference.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portal Page</title>
-    <link href="styles/styles.css" rel="stylesheet" />
+    <link href="styles/reference.css" rel="stylesheet" />
   </head>
   <body>
     <div id="content">
@@ -18,7 +18,7 @@
       </header>
       <main>
         <h1 id="title">Web Development</h1>
-        <img src="images/html-logo.png" alt="Web Logos" />
+        <img src="images/Logohtml.png" alt="Web Logos" />
         <div id="comp-grid">
           <section id="html">
             <h2>HTML</h2>
