--- a/index.html
+++ b/index.html
@@ -12,53 +12,53 @@
                 <nav>
                     <a href="home">Home</a>
                     <a href="aboutme">About Me</a>
-                    <div id="logo">
-                        <img src="images/blacklogo.png" alt="logo"/>
-                    </div>
+                    <img id ="logo" src="images/blacklogo.png" alt="logo"/>
                     <a href="wwr">WWR</a>
                     <a href="ice">ICE</a>
                 </nav>
             </header>
             <main>
-                <h1 id="title">Kali's Portal Page</h1>
-                <div id="titleimage">
-                    <img src="images/galaxy2.0.jpg" alt="background image">
+                <div id="title-image">
+                    <h1 id="title">The Portfolio of Kali Richardson</h1>
+                    <img id ="galaxy" src="images/forest2.0.jpg" alt="background image">
                 </div>
                 <div id="grid1">
-                    <section class="HP">
+                    <div id="HP">
                         <h2>Heading</h2>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                             </p>
-                            <img src="images/pine-forest-background.jpg" alt="image">
-                    </section>
+                            <p>Occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+                            </p>
+                    </div>
+                        <img id="forest" src="images/forestmountain2.jpg" alt="image">
                 </div>
                 <div id ="grid2">
                     <section class="four">
                         <div id="box1">
-                            <img src="images/blacklogo.png" alt="image">
+                            <img id="logo2" src="images/blacklogo.png" alt="image">
                             <h3>Home</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
                         </div>
-                        <div id="box1">
-                            <img src="images/me.jpg" alt="image">
+                        <div id="box2">
+                            <img id="me" src="images/me2.0.jpg" alt="image">
                             <h3>About Me</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
                         </div>
-                        <div id="box1">
-                            <img src="images/templogo.png" alt="image">
+                        <div id="box3">
+                            <img id="wwr" src="images/templogo.png" alt="image">
                             <h3>WWR</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
                         </div>
-                        <div id="box1">
-                            <img src="images/everything.png" alt="image">
+                        <div id="box4">
+                            <img id="everything" src="images/everything.png" alt="image">
                             <h3>ICE</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
                         </div>
                     </section>
                 </div>
                 <div id="grid3">
-                    <section class="table & list">
-                        <table>
+                    <section class="table-list">
+                        <table id="table">
                             <tr>
                                 <th>Lorem</th>
                                 <th>Excepteur</th>
@@ -79,13 +79,9 @@
                                 <td>orem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat.</td>
                                 <td>ctetur adipiscing elit, sed do eiusm</td>
                             </tr>
-                            <tr>
-                                <td>orem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat.</td>
-                                <td>Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere.</td>
-                                <td>In id cursus mi pretium tellus duis convallis.</td>
-                            </tr>
                         </table>
-                        <h2>Heading</h2>
+                        <div id="list">
+                            <h2>Heading</h2>
                         <ul>
                             <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip</li>
                             <li>o laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est labor</li>
@@ -95,6 +91,7 @@
                             <li>e cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est labo</li>
                             <li>etur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla par</li>
                         </ul>
+                        </div>
                     </section>
                 </div>
             </main>
